# sf_report_agent

./: .env.template  Dockerfile  README.md  docker-compose.checker.yml  docker-compose.yml  pyproject.toml
checker/: Dockerfile  checker.py
src/: main.py
src/agent/: report_meta_parser.py  soql_checker.py  soql_error_fixer.py  soql_generator_fullpdf.py  soql_vectorstore.py
src/agent/docs/: salesforce_soql_document.txt
src/config/: settings.py
src/outputs/20251126_011950/: embed.py  query.txt  result.csv
src/outputs/20251126_012613/: embed.py  gas_call_condition.csv  gas_call_condition.txt
src/outputs/20251128_153120/: embed.py  proxy_embed.py  query.txt  result.csv
src/outputs/20251128_154741/: embed.py  proxy_embed.py
src/outputs/20251128_155004/: embed.py  proxy_embed.py  query.txt
src/outputs/20251203_072134/: embed.py  proxy_embed.py  query.txt  result.csv
src/outputs/20251203_072407/: embed.py  proxy_embed.py  query.txt  result.csv
src/outputs/20251207_074306/: embed.py  proxy_embed.py  query.txt  result.csv
src/outputs/20251208_060751/: column_map.txt
src/outputs/20251208_061008/: embed.py  proxy_embed.py
src/outputs/20251208_062422/: embed.py  proxy_embed.py  report_meta.json
src/outputs/20251208_062837/: proxy_embed.py  result.csv
src/outputs/20251208_064523/: embed.py
src/outputs/20251210_024945/: embed.py  proxy_embed.py  query.txt  result.csv
src/salesforce/: auth.py  bulk_soql_api.py  embed_template.py  proxy_embed_template.py  rest_report_api.py
