[project]
name = "bulk-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "kosuke1727",email = "mokota27@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain (>=1.0.5,<2.0.0)",
    "langchain-anthropic (>=1.0.2,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "pypdf (>=6.2.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
